tests/ui/fn/fn-ptr-eq-op.stderr
error[E0369]: binary operation `==` cannot be applied to type `for<'a> fn(&'a ())`
  --> $DIR/fn-ptr-eq-op.rs:6:7
   |
LL |     x == y;
   |     - ^^ - fn(&())
   |     |
   |     for<'a> fn(&'a ())
   |
help: use parentheses to call these
   |
LL |     x(/* &() */) == y(/* &() */);
   |      +++++++++++     +++++++++++

error[E0369]: binary operation `==` cannot be applied to type `for<'a> fn(&'a ())`
  --> $DIR/fn-ptr-eq-op.rs:10:7
   |
LL |     x == y;
   |     - ^^ - fn(&())
   |     |
   |     for<'a> fn(&'a ())
   |
help: use parentheses to call these
   |
LL |     x(/* &() */) == y(/* &() */);
   |      +++++++++++     +++++++++++

error[E0369]: binary operation `==` cannot be applied to type `for<'a> fn(&'a ())`
  --> $DIR/fn-ptr-eq-op.rs:14:7
   |
LL |     x == y;
   |     - ^^ - fn(&())
   |     |
   |     for<'a> fn(&'a ())
   |
help: use parentheses to call these
   |
LL |     x(/* &() */) == y(/* &() */);
   |      +++++++++++     +++++++++++

error[E0369]: binary operation `==` cannot be applied to type `for<'a> fn(&'a ())`
  --> $DIR/fn-ptr-eq-op.rs:18:7
   |
LL |     x == foo;
   |     - ^^ --- fn(&())
   |     |
   |     for<'a> fn(&'a ())
   |
help: use parentheses to call these
   |
LL |     x(/* &() */) == foo(/* &() */);
   |      +++++++++++       +++++++++++

error[E0369]: binary operation `==` cannot be applied to type `for<'a> fn(&'a ())`
  --> $DIR/fn-ptr-eq-op.rs:19:7
   |
LL |     y == foo;
   |     - ^^ --- fn(&())
   |     |
   |     for<'a> fn(&'a ())
   |
help: use parentheses to call these
   |
LL |     y(/* &() */) == foo(/* &() */);
   |      +++++++++++       +++++++++++

error[E0369]: binary operation `==` cannot be applied to type `for<'a> fn(&'a ()) {foo}`
  --> $DIR/fn-ptr-eq-op.rs:20:9
   |
LL |     foo == x;
   |     --- ^^ - for<'a> fn(&'a ())
   |     |
   |     for<'a> fn(&'a ()) {foo}
   |
help: use parentheses to call these
   |
LL |     foo(/* &() */) == x(/* &() */);
   |        +++++++++++     +++++++++++

error[E0308]: mismatched types
  --> $DIR/fn-ptr-eq-op.rs:20:12
   |
LL |     foo == x;
   |            ^ expected fn item, found fn pointer
   |
   = note: expected fn item `for<'a> fn(&'a ()) {foo}`
           found fn pointer `for<'a> fn(&'a ())`

error[E0369]: binary operation `==` cannot be applied to type `for<'a> fn(&'a ()) {foo}`
  --> $DIR/fn-ptr-eq-op.rs:22:9
   |
LL |     foo == y;
   |     --- ^^ - for<'a> fn(&'a ())
   |     |
   |     for<'a> fn(&'a ()) {foo}
   |
help: use parentheses to call these
   |
LL |     foo(/* &() */) == y(/* &() */);
   |        +++++++++++     +++++++++++

error[E0308]: mismatched types
  --> $DIR/fn-ptr-eq-op.rs:22:12
   |
LL |     foo == y;
   |            ^ expected fn item, found fn pointer
   |
   = note: expected fn item `for<'a> fn(&'a ()) {foo}`
           found fn pointer `for<'a> fn(&'a ())`

error[E0369]: binary operation `==` cannot be applied to type `for<'a> fn(&'a ())`
  --> $DIR/fn-ptr-eq-op.rs:27:7
   |
LL |     x == y;
   |     - ^^ - fn(&())
   |     |
   |     for<'a> fn(&'a ())
   |
help: use parentheses to call these
   |
LL |     x(/* &() */) == y(/* &() */);
   |      +++++++++++     +++++++++++

error[E0369]: binary operation `==` cannot be applied to type `for<'a> fn(&'a ()) {foo}`
  --> $DIR/fn-ptr-eq-op.rs:32:9
   |
LL |     foo == x;
   |     --- ^^ - fn(&())
   |     |
   |     for<'a> fn(&'a ()) {foo}
   |
help: use parentheses to call these
   |
LL |     foo(/* &() */) == x(/* &() */);
   |        +++++++++++     +++++++++++

error[E0308]: mismatched types
  --> $DIR/fn-ptr-eq-op.rs:32:12
   |
LL |     foo == x;
   |            ^ expected fn item, found fn pointer
   |
   = note: expected fn item `for<'a> fn(&'a ()) {foo}`
           found fn pointer `fn(&())`

error: aborting due to 12 previous errors

Some errors have detailed explanations: E0308, E0369.
For more information about an error, try `rustc --explain E0308`.
